fix artworks title not showing correctly on mobile

--- a/app/scss/artworks.scss
+++ b/app/scss/artworks.scss
@@ -1604,7 +1604,9 @@ $layer-show-time: 1s;
 .parallax-layer-smile {
     background-size: cover;
     --height: min(80vh, min(80vw, #{$max-width * 0.8}));
+    --height: min(80dvh, min(80vw, #{$max-width * 0.8}));
     top: 50vh;
+    top: 50dvh;
     right: 50%;
     height: var(--height);
     margin-top: calc(var(--height) * -0.55);
@@ -1704,6 +1706,7 @@ $layer-show-time: 1s;
 }
 .parallax-layer-artworks {
     top: 50vh;
+    top: 50dvh;
     left: -400%;
     right: -400%;
     width: 900%;
@@ -1711,7 +1714,7 @@ $layer-show-time: 1s;
         padding: 0;
         margin: 0 auto;
         font-size: 10vw;
-        text-indent: -60vw;
+        //text-indent: -60vw;
         margin-top: -0.5em;
         pointer-events: none;
         width: fit-content;
